--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -447,6 +447,7 @@
             android:background="@drawable/toolbar_shadow" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/buttons_container"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:layout_gravity="bottom">
@@ -480,12 +481,11 @@
                 app:layout_constraintBottom_toBottomOf="@id/start_recording_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/start_recording_button"
-                app:layout_constraintWidth_percent="0.5"
                 tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/start_recording_button"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="72dp"
                 android:layout_marginBottom="16dp"
                 android:background="@color/recording_off_button"
@@ -499,8 +499,24 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                 app:layout_constraintBottom_toTopOf="@id/instructions_button"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintWidth_percent="0.5"
                 tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/stop_button"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/critical_red"
+                android:clickable="true"
+                android:elevation="16dp"
+                android:focusable="true"
+                android:gravity="center"
+                android:paddingVertical="16dp"
+                android:text="@string/stop_label"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                app:layout_constraintBottom_toTopOf="@id/instructions_button"
+                tools:visibility="invisible" />
 
             <View
                 android:layout_width="match_parent"
