--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             app:navigationIcon="@drawable/arrow_back"
-            app:title="@string/find_your_elocs" />
+            app:title="@string/my_elocs" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
@@ -25,63 +25,13 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:visibility="invisible">
+            android:layout_height="match_parent">
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/mapView"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@id/unknown_devices_panel"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <LinearLayout
-                android:id="@+id/unknown_devices_panel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <LinearLayout
-                    android:id="@+id/unknown_devices_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/elocs_with_unknown_location"
-                        android:textColor="#fff"
-                        android:textSize="16sp" />
-
-                    <ImageView
-                        android:id="@+id/down_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:importantForAccessibility="no"
-                        android:src="@drawable/ic_down" />
-
-                    <ImageView
-                        android:id="@+id/up_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:importantForAccessibility="no"
-                        android:src="@drawable/ic_up" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/unknown_devices_text_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="8dp" />
-            </LinearLayout>
+                android:layout_height="match_parent" />
 
             <LinearLayout
                 android:id="@+id/loading_layout"
@@ -117,4 +67,10 @@
             android:layout_height="8dp"
             android:background="@drawable/toolbar_shadow" />
     </FrameLayout>
+
+    <View
+        android:id="@+id/dialog_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#66000000" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
