--- a/app/src/main/res/values/old_strings.xml
+++ b/app/src/main/res/values/old_strings.xml
@@ -84,7 +84,7 @@
     <string name="filter">Filter</string>
     <string name="filter_by_ranger">Filter by ranger</string>
     <string name="find_my_eloc">Find my ELOC</string>
-    <string name="find_your_elocs">Find your ELOCs</string>
+    <string name="my_elocs">My ELOCs</string>
 
     <string name="font_size">Font size</string>
     <string name="forgot_password">Forgot password?</string>
@@ -132,7 +132,6 @@
     <string name="mic_type_missing">You must enter a mic type to set!</string>
     <string name="microphone_gain">Microphone Gain</string>
 
-    <string name="my_eloc">My ELOC</string>
     <string name="new_email_address">New email address</string>
     <string name="new_password">New password</string>
     <string name="new_value">New value</string>
