--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,44 +25,52 @@
         android:text="@string/app_name"
         android:textSize="18sp" />
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_sign_in_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:buttonSize="wide"
-        app:colorScheme="dark" />
-
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/google_sign_in_progress_indicator"
-        android:layout_width="@dimen/auth_input_width"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:indeterminate="true" />
-
-    <LinearLayout
-        android:layout_width="@dimen/auth_input_width"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <TextView
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:text="@string/or"
-            android:textAllCaps="true" />
+            android:layout_marginTop="16dp"
+            app:buttonSize="wide"
+            app:colorScheme="dark" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="0dp"
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/google_sign_in_progress_indicator"
+            android:layout_width="@dimen/auth_input_width"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_marginTop="8dp"
+            android:indeterminate="true" />
+
+        <LinearLayout
+            android:layout_width="@dimen/auth_input_width"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:text="@string/or"
+                android:textAllCaps="true" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
